# auto-trading-system

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
api/: __init__.py  main.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DATA_SCHEMA.md  DEV_SETUP.md  GITHUB_REFERENCES.md  PROJECT_GUIDELINES.md  TESTING.md  US_MARKET_NOTES.md
docs/adr/: 0000-template.md  0001-close-entry-lookahead.md  0002-data-source.md  0003-universe-exclusions.md  0004-transaction-costs.md  0005-case-inspector-webapp.md  0006-split-adjustment.md  README.md
src/: __init__.py
src/layer1_data/: __init__.py  exclusions.py  marcap_loader.py  universe.py
src/layer2_signals/: __init__.py
src/layer3_strategy/: __init__.py  screening.py
src/layer4_execution/: __init__.py  costs.py
tests/: test_api.py  test_costs.py  test_exclusions.py  test_marcap_loader.py  test_smoke.py  test_universe.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  CandleChart.tsx  ProChart.tsx  api.ts  index.css
