[project]
name = "auto-trading-system"
version = "0.0.1"
description = "한국 주식 스윙 트레이딩 백테스트/자동매매 시스템 (docs/PROJECT_GUIDELINES.md 참조)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "BORB-CHOI" }]

# 런타임 의존성 — 최소로 시작 (docs/CLAUDE.md: 데이터 범위 = 최소).
# 데이터 소스/신호가 확정될 때마다 add. 미리 채우지 않는다.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",   # parquet (marcap 데이터셋)
]

[project.optional-dependencies]
# 개발 도구.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
# 백테스트 P&L 대조 oracle (docs/CLAUDE.md: 메인 엔진 ❌, 대조용으로만).
oracle = [
    "backtesting>=0.3",
]
# 케이스 검사기 웹 도구 백엔드 (ADR-0005). 데이터를 프런트로 내주기만 한다 — 매매 판단 ❌.
webapp = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",     # TestClient (api 테스트)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ─────────────────────────────────────────────────────────────
# Ruff — 린트 + 포맷 (black/flake8/isort 대체)
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "PD",            # pandas-vet (look-ahead/체이닝 실수 잡기)
    "NPY",           # numpy
]
ignore = [
    "E501",   # line-length는 formatter가 처리
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: 네트워크/대용량 데이터가 필요한 테스트 (CI 기본 제외)",
]

# ─────────────────────────────────────────────────────────────
# mypy — 점진 타이핑 (엄격도는 코드 늘면서 상향)
# ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
